--- a/M07.telling_a_story_workbook/.godot/editor/editor_layout.cfg
+++ b/M07.telling_a_story_workbook/.godot/editor/editor_layout.cfg
@@ -31,9 +31,9 @@ dock_5="Inspector,Node,History,GDQuest"
 open_scenes=PackedStringArray("res://lessons/dialogue.tscn")
 current_scene="res://lessons/dialogue.tscn"
 center_split_offset=0
-selected_bottom_panel_item=10
+selected_bottom_panel_item=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 
 [EditorWindow]
 
@@ -43,16 +43,16 @@ position=Vector2i(0, 0)
 
 [ScriptEditor]
 
-open_scripts=[]
-selected_script=""
+open_scripts=["res://lessons/dialogue.gd"]
+selected_script="res://lessons/dialogue.gd"
 open_help=[]
 script_split_offset=400
 list_split_offset=0
-zoom_factor=1.0
+zoom_factor=0.59186757
 
 [GameView]
 
-floating_window_rect=Rect2i(468, 238, 1944, 1172)
+floating_window_rect=Rect2i(468, 236, 1944, 1172)
 floating_window_screen=0
 
 [ShaderEditor]
