--- a/M07.telling_a_story_workbook/.godot/editor/script_editor_cache.cfg
+++ b/M07.telling_a_story_workbook/.godot/editor/script_editor_cache.cfg
@@ -3,10 +3,24 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
+"column": 12,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 20,
+"scroll_position": 16.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://lessons/expression.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 17,
+"row": 9,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
