--- a/M07.telling_a_story_workbook/.godot/editor/editor_layout.cfg
+++ b/M07.telling_a_story_workbook/.godot/editor/editor_layout.cfg
@@ -9,7 +9,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://lessons/expression.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://assets/emotion_sad.png")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://lessons/", "res://assets/")
 dock_node_current_tab=0
 dock_history_include_scene=true
@@ -38,8 +38,8 @@ selected_main_editor_idx=0
 [EditorWindow]
 
 screen=0
-mode="fullscreen"
-position=Vector2i(0, 0)
+mode="maximized"
+position=Vector2i(0, 29)
 
 [ScriptEditor]
 
@@ -52,7 +52,7 @@ zoom_factor=0.59186757
 
 [GameView]
 
-floating_window_rect=Rect2i(468, 236, 1944, 1172)
+floating_window_rect=Rect2i(0, 0, 1932, 1127)
 floating_window_screen=0
 
 [ShaderEditor]
