--- a/M07.telling_a_story_workbook/.godot/editor/project_metadata.cfg
+++ b/M07.telling_a_story_workbook/.godot/editor/project_metadata.cfg
@@ -9,7 +9,8 @@ executable_path="C:/Users/geney/Downloads/Godot_v4.5.1-stable_win64.exe/Godot_v4
 
 [dialog_bounds]
 
-create_new_node=Rect2(540, 200, 1800, 1400)
+create_new_node=Rect2(98, 201, 1800, 1140)
+project_settings=Rect2(360, 250, 1200, 700)
 
 [color_picker]
 
